force-app/main/default/objects/Integration_Transaction__c/Integration_Transaction__c.object-meta.xml
<CustomObject>
    <label>Integration Transaction</label>
    <nameField>
        <label>Integration Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>