force-app/main/default/objects/Integration_Transaction__c/fields/Call__c.field-meta.xml
<CustomField>
    <fullName>Call__c</fullName>
    <label>Call</label>
    <length>80</length>
    <type>Text</type>
</CustomField>