force-app/main/default/objects/Integration_Transaction__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <label>Interface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pegaso</fullName>
            </value>
            <value>
                <fullName>ISNetworld</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>